crates/nash-report/tests/parse/expression/snapshots/parse__expression__number__error_float_zero.snap
---
source: crates/nash-report/tests/parse/expression/number.rs
assertion_line: 20
description: "Code:\n\n0.5"
info: diagnostic
---
nash::syntax

  × Floating point numbers are not supported.
   ╭─[src/Main.nash:1:2]
 1 │ 0.5
   ·  ─
   ╰────
  help: Use an integer such as `0`.
