crates/nash-report/tests/parse/expression/snapshots/parse__expression__number__error_hex_no_digits.snap
---
source: crates/nash-report/tests/parse/expression/number.rs
assertion_line: 10
description: "Code:\n\n0x"
info: diagnostic
---
nash::syntax

  × Expected a hexadecimal digit.
   ╭─[src/Main.nash:1:3]
 1 │ 0x
   ·   ─
   ╰────
  help: Use digits from `0123456789abcdefABCDEF`.
